--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,44 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&display=swap');
+
+*{
+	padding: 0;
+	margin: 0;
+}
+
 body{
-    background-image: url(../img/fondo.png)
+    background-color: #FEC868;
 }
 
 #logo{
 	width: 300px;
   	height: 75px;
+}
+
+header{
+	display: flex;
+	top: 0;
+	position: fixed;
+	z-index: 1;
+	width: 100%;
+	align-items: center;
+	justify-content: space-between;
+	height: 10vh;
+	box-shadow: 2px 3px 5px rgba(71, 50, 61, 1);
+	font-family: 'Josefin Sans', sans-serif;
+}
+
+nav a {
+	color: #473C33;
+	text-decoration: none;
+	font-size: 24px;
+	margin-left: 12px; 
+}
+
+nav {
+	margin-right: 5vw;
+}
+
+nav a:hover{
+	color: #FDA769;
+	transition: 0.1s;
 }
