--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,7 @@ body{
 #logo{
 	width: 300px;
   	height: 75px;
+  	margin-left: 2vw;
 }
 
 header{
@@ -25,6 +26,7 @@ header{
 	height: 10vh;
 	box-shadow: 2px 3px 5px rgba(71, 50, 61, 1);
 	font-family: 'Josefin Sans', sans-serif;
+	background-color: #FEC868; 
 }
 
 nav a {
@@ -41,4 +43,36 @@ nav {
 nav a:hover{
 	color: #FDA769;
 	transition: 0.1s;
+}
+
+#seccion1{
+	margin-top: 10vh;
+	width: 100%;
+	height: 90vh;;
+}
+
+#seccion2{
+	margin-top: 10vh;
+	width: 100%;
+	height: 90vh;
+	background-color: #473C33;
+}
+
+#seccion3{
+	margin-top: 10vh;
+	width: 100%;
+	height: 90vh;;
+}
+
+#seccion4{
+	margin-top: 10vh;
+	width: 100%;
+	height: 90vh;
+	background-color: #473C33;
+}
+
+#seccion5{
+	margin-top: 10vh;
+	width: 100%;
+	height: 90vh;;
 }
