--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,10 @@
 	margin: 0;
 }
 
+html{
+	scroll-behavior: smooth;
+}
+
 body{
     background-color: #FEC868;
 }
@@ -48,27 +52,27 @@ nav a:hover{
 #seccion1{
 	margin-top: 10vh;
 	width: 100%;
-	height: 90vh;;
+	height: 100vh;;
 }
 
 #seccion2{
 	width: 100%;
-	height: 90vh;
+	height: 100vh;
 	background-color: #473C33;
 }
 
 #seccion3{
 	width: 100%;
-	height: 90vh;;
+	height: 100vh;;
 }
 
 #seccion4{
 	width: 100%;
-	height: 90vh;
+	height: 100vh;
 	background-color: #473C33;
 }
 
 #seccion5{
 	width: 100%;
-	height: 90vh;;
+	height: 100vh;;
 }
