--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&display=swap');
 
+:root{
+	--cafecito:#473C33;
+	--amarillito:#FEC868;
+	--naranjita: #FDA769;
+}
+
 *{
 	padding: 0;
 	margin: 0;
@@ -10,7 +16,7 @@ html{
 }
 
 body{
-    background-color: #FEC868;
+    background-color: var(--amarillito);
 }
 
 #logo{
@@ -30,11 +36,11 @@ header{
 	height: 10vh;
 	box-shadow: 2px 3px 5px rgba(71, 50, 61, 1);
 	font-family: 'Josefin Sans', sans-serif;
-	background-color: #FEC868; 
+	background-color: var(--amarillito); 
 }
 
 nav a {
-	color: #473C33;
+	color: var(--cafecito);
 	text-decoration: none;
 	font-size: 24px;
 	margin-left: 12px; 
@@ -45,36 +51,20 @@ nav {
 }
 
 nav a:hover{
-	color: #FDA769;
+	color: var(--naranjita);
 	transition: 0.1s;
 }
 
+div{
+	width: 100%;
+	height: 100vh;
+}
+
 #seccion1{
-	margin-top: 10vh;
-	width: 100%;
-	height: 100vh;;
+	margin-top: 10vh;	
 }
-
-#seccion2{
-	width: 100%;
-	height: 100vh;
-	background-color: #473C33;
-}
-
-#seccion3{
-	width: 100%;
-	height: 100vh;;
-}
-
-#seccion4{
-	width: 100%;
-	height: 100vh;
-	background-color: #473C33;
-}
-
-#seccion5{
-	width: 100%;
-	height: 100vh;;
+div #seccion2, div #seccion4{
+	background-color: var(--cafecito);
 }
 h1{
 	font-family: 'Josefin Sans', sans-serif;
